syntax = "proto3";

package post;

// The PostService definition
service PostService {
  rpc GetOnePost (GetOnePostRequest) returns (PostResponse);
  rpc GetAllPost (GetAllPostsRequest) returns (GetAllPostsResponse);
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
}


//Object structures in u want to send data in nested object vimp remember
message PostStructure {
  string title = 1;
  string content = 2;
}

message UserStructure {
  int32 sub = 1;
  string email = 2;
  string role = 3;
}

message QueryStructure {
  string page = 1;  // optional
  string limit = 2; // optional
}

// --- Pagination metadata ---
message MetaData {
  int32 currentPage = 1;
  int32 itemsPerPage = 2;
  int32 totalItems = 3;
  int32 totalPages = 4;
  bool hasPreviousPage = 5;
  bool hasNextPage = 6;
}

// Request message for getting one post
message GetOnePostRequest {
  int32 id = 1;
}

// Single post structure
message PostResponse {
  int32 id = 1;
  string title = 2;
  int32 author = 3;
  string content = 4;
  string createdAt = 5;
}

// Request message for getting all posts (empty for now)
message GetAllPostsRequest {
  QueryStructure query = 1;
}

// Response for multiple posts
message GetAllPostsResponse {
  repeated PostResponse items = 1;
  MetaData meta = 2;
}

// Request message for create post
message CreatePostRequest {
  PostStructure postData = 1;
  UserStructure user = 2;
}

// Response for post response
message CreatePostResponse {
  int32 id = 1;
  string title = 2;
  int32 author = 3;
  string content = 4;
  string createdAt = 5;
}

message UpdatePostRequest {
  string id = 1;
  PostStructure postData = 2;
}

// Response for update post
message UpdatePostResponse {
  string message = 1;
}

message DeletePostRequest {
  int32 id = 1;
}

// Response for delete post
message DeletePostResponse {
  string message = 1;
  PostResponse post = 2;
}